tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/multi-del.stderr
TOML parse error at line 1, column 20
  |
1 | multi-del = """null"""
  |                    ^
invalid multiline basic string
